fixed on-hover flicker issue, created visible-on-hover icons

--- a/minimal_home.css
+++ b/minimal_home.css
@@ -1,4 +1,4 @@
-html , body, #firstcontainer, #grid {
+html , body, #firstcontainer, #grid  {
 	width: 100%;
 	height: 100%;
 }
@@ -8,11 +8,7 @@ body {
 	font-family: 'Open Sans', sans-serif;
 }
 
-#grid {
-	display: none;
-}
-
-#firstcontainer, #secondcontainer, #grid, 
+#firstcontainer, #secondcontainer, .easteregg, #grid, 
 /* having issues with "#grid div" */
 #grid div:nth-of-type(1), #grid div:nth-of-type(2), 
 #grid div:nth-of-type(3), #grid div:nth-of-type(4) {
@@ -23,32 +19,20 @@ body {
 	display: flex;
 	justify-content: center; /* horizontal centering */
 }
-
 #firstinner {
 	align-self: center;	/* vertically centers within flex container */
 	text-align: center;
 	width: 500px;
 	/* height: 100%; */
 }
-
 h1 {
 	margin-top: 0;
 	font-size: 42px;
 }
-
-/*testing*/
-#firstcontainer:hover~#grid {
-	display: block;
-}
-#firstcontainer:hover~h1 {
-	background-color: red;
-}
-
 blockquote {
 	margin-top: 150px;
 	margin-bottom: 0;
 }
-
 blockquote footer {
 	text-align: right;
 }
@@ -57,7 +41,6 @@ blockquote footer {
 	top: 0;
 	right: 0;
 }
-
 ul {
 	list-style-type: none;
 	margin: 0 20px 0 0;
@@ -69,15 +52,33 @@ li {
 	/* don't put float:right here! will reverse the order of items*/
 	display: inline-block;
 }
-
 li a {
 	display: block;
 	color: black;
 	text-align: center;
-	padding: 20px 10px;
+	padding: 20px 15px;
 	text-decoration: none;
 }
 
+li a:hover {
+	font-weight: bold;
+	text-decoration: underline;
+}
+
+.easteregg  {
+	width: 48px; height: 48px; 	/* prevents flickering effect when applying hover */
+	z-index: 1;	
+	top: calc(33% - 24px); 		/* http://stackoverflow.com/a/14101451 */
+}
+#ee1 { left: calc(33% - 24px); }
+#ee2 { left: calc(67% - 24px); }
+.easteregg:hover svg { visibility: visible; }
+.easteregg:hover~#grid { display: block; }
+svg { visibility: hidden; }
+
+#grid {
+	display: none;
+}
 #grid div:nth-of-type(1), #grid div:nth-of-type(2) {
 	width: 100%;
 	border-top: 1px solid #ddd;
